Bug 375364 - Cannot encrypt with Dolphin services
Summary: Cannot encrypt with Dolphin services
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (show other bugs)
Version: 16.12
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-21 09:12 UTC by Samim Pezeshki
Modified: 2017-08-08 15:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 17.08.0


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samim Pezeshki 2017-01-21 09:12:01 UTC
Hi,

In Dolphin I have the kgpg service menu "Encrypt File". But when I click on it nothing happens. Does it encrypt the file to other location? 

Thanks,
Samim
Comment 1 Rolf Eike Beer 2017-08-08 15:25:20 UTC
Git commit 2e055ed39927fb36657d5f721d968ba011ce84d0 by Rolf Eike Beer.
Committed on 08/08/2017 at 15:25.
Pushed by dakon into branch 'Applications/17.08'.

fix command line argument handling when one instance is already running
FIXED-IN:17.08.0

M  +52   -31   kgpg.cpp
M  +16   -3    kgpg.h
M  +8    -9    main.cpp

https://commits.kde.org/kgpg/2e055ed39927fb36657d5f721d968ba011ce84d0