fix command line argument handling when one instance is already running

BUG:375364
FIXED-IN:17.08.0